@@ -7,6 +7,9 @@
 
 RELEASE 2.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
+  From Gary Oberbrunner:
+    - Fix precompiled headers on Windows when variant dir name has spaces.
+
   From Gary Oberbrunner and Sohail Somani:
     - new construction variable WINDOWS_EMBED_MANIFEST to automatically
       embed manifests in Windows EXEs and DLLs.
